welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:29: error: ')' expected but ';' found.
fleur(Color.red; Color.yellow);
               ^FlowerPot:29: error: ';' expected but ')' found.
fleur(Color.red; Color.yellow);
                             ^